# GRAMs

./: CMakeLists.txt  TODOlist.txt  config.cmake  images.qrc  log-Thu Dec 7 2023.txt  resources.qrc
modules/Style/: CMakeLists.txt  Style.qml  qmldir
profile/: GRAMsPfp.json  usb-4716-ai-diff-8.xml  usb-4718-ai-tc-8.xml
qml/: BuffChart.qml  Chart.qml  ControlPanel.qml  GRAMsMnemoForm.ui.qml  Initialize.qml  KalmanTable.qml  LineChart.qml  MultiButton.qml  MyChart.qml  Page1.qml  Page2.qml  Page3.qml  PressureSetting.qml  SetUpGRAMs.qml  ValveSetting.qml  VisualChannelMapping.qml  main.qml
qml/mnemo/: Valve.ui.qml
qml/mnemo/_GRAM350/: GRAMsMnemoForm.ui.qml
qml/mnemo/_GRAM50/: GRAM50Mnemo.ui.qml  PressureSlider.qml  SensorWidget.qml  TempSlider.qml  ThermoWidget.qml
src/: Controller.cpp  Controller.h  ControllerInfo.cpp  ControllerInfo.h  CustomPlotItem.cpp  CustomPlotItem.h  DataAcquisition.cpp  DataAcquisition.h  DataModel.cpp  DataModel.h  FilterView.cpp  FilterView.h  Grams.cpp  Grams.h  Initialize.cpp  Initialize.h  QmlJsonWrap.cpp  QmlJsonWrap.h  Security.cpp  Security.h  Sensor.cpp  Sensor.h  ValveModel.cpp  ValveModel.h  VoltageFilter.cpp  VoltageFilter.h  main.cpp
src/controllers/: AdvantechCtrl.cpp  AdvantechCtrl.h  ControllerInfo.cpp  ControllerInfo.h
